--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -6,7 +6,11 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="10,-67,-10,67">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="51*"/>
+            <ColumnDefinition Width="349*"/>
+        </Grid.ColumnDefinitions>
 
     </Grid>
 </Window>
