--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="MainWindow" Height="640" Width="800">
+        Title="DroneList" Height="450" Width="800">
     <Grid Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="50*"/>
@@ -34,4 +34,5 @@ VerticalAlignment="Stretch" Width="auto">
         </ListView>
 
     </Grid>
+
 </Window>
