--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="400,124,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
     </Grid>
 
