--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -25,7 +25,7 @@
             <Label Content="Drone Status" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
             <Label Content="Drone Weight" Grid.Column="2" HorizontalAlignment="Center" Margin="0,6,0,0" VerticalAlignment="Top"/>
         </Grid>
-        <ListView x:Name="droneToListListView" ItemsSource="{Binding}" Margin="10,41,218,10" SelectionMode="Single" Grid.Row="1">
+        <ListView x:Name="droneToListListView" ItemsSource="{Binding}" Margin="10,41,218,10" SelectionMode="Single" Grid.Row="1" MouseDoubleClick="droneToListListView_MouseDoubleClick">
             <ListView.ItemContainerStyle>
                 <Style>
                     <Setter Property="Control.HorizontalContentAlignment" Value="Stretch"/>
@@ -99,7 +99,7 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="694,236,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="Add New Drone" HorizontalAlignment="Left" Margin="660,239,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click" Height="39" Width="116" Background="#FFB94343" FontFamily="Arial Black" FontWeight="Normal"/>
 
     </Grid>
 
