--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -7,10 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.Background>
+            <ImageBrush/>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="400,124,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="List Of Drones" HorizontalAlignment="Left" Margin="303,284,0,0" VerticalAlignment="Top" Click="Button_Click" Height="93" Width="231" Background="#FFBF3F3F" FontSize="24" FontFamily="Arial Black" FontWeight="Bold"/>
 
     </Grid>
 
