--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PL.DroneList"
+﻿<Window x:Class="PL.DroneListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -25,7 +25,7 @@
             <Label Content="Drone Status" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
             <Label Content="Drone Weight" Grid.Column="2" HorizontalAlignment="Center" Margin="0,6,0,0" VerticalAlignment="Top"/>
         </Grid>
-        <ListView x:Name="droneToListListView" ItemsSource="{Binding}" Margin="10,41,218,10" SelectionMode="Single" Grid.Row="1" MouseDoubleClick="droneToListListView_MouseDoubleClick">
+        <ListView x:Name="droneToListListView" ItemsSource="{Binding}" Margin="10,41,218,10" SelectionMode="Single" Grid.Row="1">
             <ListView.ItemContainerStyle>
                 <Style>
                     <Setter Property="Control.HorizontalContentAlignment" Value="Stretch"/>
