--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -25,7 +25,7 @@
             <Label Content="Drone Status" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"/>
             <Label Content="Drone Weight" Grid.Column="2" HorizontalAlignment="Center" Margin="0,6,0,0" VerticalAlignment="Top"/>
         </Grid>
-        <ListView x:Name="droneToListListView" ItemsSource="{Binding}" Margin="10,41,218,10" SelectionMode="Single" Grid.Row="1">
+        <ListView x:Name="droneToListListView" ItemsSource="{Binding}" Margin="10,41,218,10" SelectionMode="Single" Grid.Row="1" MouseDoubleClick="droneToListListView_MouseDoubleClick">
             <ListView.ItemContainerStyle>
                 <Style>
                     <Setter Property="Control.HorizontalContentAlignment" Value="Stretch"/>
