--- a/PL/Drone.xaml
+++ b/PL/Drone.xaml
@@ -8,6 +8,12 @@
         Title="Drone" Height="450" Width="800">
     <Grid Margin="50,32,0,-3">
         <Grid Name="droneup" Margin="0,0,0,23">
+            <Grid.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFF9FFFA"/>
+                    <GradientStop Color="#FFA3E5AD" Offset="1"/>
+                </LinearGradientBrush>
+            </Grid.Background>
             <ComboBox x:Name="WeightComboBox" Text="{Binding Weight, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}"  HorizontalAlignment="Left" Margin="356,127,0,0" VerticalAlignment="Top" Width="120" FontFamily="Arial Black" FontWeight="Bold" SelectionChanged="WeightComboBox_SelectionChanged">
             </ComboBox>
             <Label x:Name="WeightLabel" Content="Weight:" HorizontalAlignment="Left" Margin="253,122,0,0" VerticalAlignment="Top" FontFamily="Segoe UI Black" Height="39" Width="87" FontSize="18"/>
