--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="DroneList" Height="450" Width="800" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick">
+        Title="DroneList" Height="450" Width="800" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick" Activated="Window_Activated">
     <Grid Name="MainGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="697*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="33*"/>
+            <ColumnDefinition Width="20*"/>
+        </Grid.ColumnDefinitions>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#FFF9FAF9"/>
@@ -19,7 +25,7 @@
             <RowDefinition Height="27*"/>
         </Grid.RowDefinitions>
 
-        <Grid Name="UpGrid" Height="auto" Grid.Row="0" Width="auto">
+        <Grid Name="UpGrid" Height="auto" Grid.Row="0" Width="auto" Grid.ColumnSpan="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -31,7 +37,7 @@
             <Label Content="Drone Status" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Background="#FFDC2711"/>
             <Label Content="Drone Weight" Grid.Column="2" HorizontalAlignment="Center" Margin="0,6,0,0" VerticalAlignment="Top" Background="#FFDC2711"/>
         </Grid>
-        <DataGrid x:Name="droneToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="70,45,250,45" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Row="1" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick" Background="#FFFAFAFA" OpacityMask="Black">
+        <DataGrid x:Name="droneToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="70,45,147,45" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Row="1" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick" Background="#FFFAFAFA" OpacityMask="Black">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="batteryStatusColumn" Binding="{Binding BatteryStatus}" Header="Battery Status" Width="SizeToHeader"/>
@@ -50,7 +56,9 @@
 
 
 
-        <Button Content="Add New Drone" HorizontalAlignment="Left" Margin="660,221,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click" Height="39" Width="116" Background="#FFB94343" FontFamily="Arial Black" FontWeight="Normal"/>
-        <Button x:Name="closeButton" Content="close" HorizontalAlignment="Left" Margin="660,300,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click_Close" Height="39" Width="116" Background="#FFB94343" FontFamily="Arial Black" FontWeight="Normal"/>
+        <Button Content="Add New Drone" HorizontalAlignment="Left" Margin="660,221,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click" Height="39" Width="116" Background="#FFB94343" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3"/>
+        <Button x:Name="closeButton" HorizontalAlignment="Left" Margin="660,300,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click_Close" Height="39" Width="116" Background="#FFB94343" FontFamily="Arial Black" FontWeight="Normal" Grid.ColumnSpan="3">
+            <Rectangle Height="39" Stroke="Black" Width="100"/>
+        </Button>
     </Grid>
 </Window>
